client/src/App.css
html,
body {
    font-family: 'Exo 2', sans-serif;
    height: 100%;
    margin: 0;
    padding: 0;
}

#root {
    height: 100%;
    margin: 0;
    padding: 0;
}

.App {
    text-align: center;
    color: white;
    background-color: white;
    min-width: 1024px;
    min-height: 100%;
    position: relative;
    margin: 0;
    padding: 0;
    background-image: url('img/bg-airplane.png');
    background-repeat: no-repeat;
    background-position: center bottom;
    background-size: 1024px 289px;
}

.App-logo {
    height: 100px;
    transition: all 0.3s ease;
}

.App-header-container {
    text-align: left;
    width: 100%;
    background-color: white;
    padding: 0;
    margin: 0;
}

.App-header {
    width: 1024px;
    background-color: white;
    padding: 20px;
    padding-left: 0;
    padding-right: 0;
    color: white;
    margin: auto;
}

.App-header-shadow {
    height: 163px;
    background-image: url('img/bg-shadow.png');
    background-repeat: repeat-x;
    background-position: bottom;
}

.App-header-right {
    color: black;
    padding-right: 20px;
    float: right;
}

.App-header-right a {
    color: black;
    padding-right: 20px;
}

.dropdown .dd-menu-items {
    top: 115px;
    padding: 0;
    margin: 20px;
}

.dropdown .dd-menu-items ul {
    background-color: #eee;
}

.dropdown .dd-menu-items a {
    font-size: 20px;
    color: #888;
    font-weight: bold;
    text-decoration: none;
    cursor: pointer;
    padding: 5px;
    margin-left: 35px;
    margin-right: 35px;
    padding-left: 10px;
    display: block;
}

.dropdown .dd-menu-items a:hover {
    color: white;
    background-color: #5ebf8e;
}

.menu-separator {
    width: 100%;
    height: 10px;
}

.menu-separator-visible {
    background-image: url('img/menu-separator.png');
    background-repeat: no-repeat;
    background-position: center center;
    background-size: 350px 9px;
}

.menu-icon {
    margin-top: 35px;
    cursor: pointer;
    width: 35px;
    height: 25px;
}

.menu-profile-container {
    width: 100%;
    height: 300px;
    background-color: white;
    background-image: url('img/bg-shadow.png');
    background-repeat: repeat-x;
    background-position: top;
}

.menu-profile-image {
    float: left;
    margin: 20px;
    margin-left: 30px;
    margin-right: 0;
    height: 260px;
}

.menu-profile-info {
    width: 250px;
    height: 300px;
    float: right;
}

.menu-profile-name {
    margin: 0;
    padding: 0;
    margin-top: 65px;
    font-size: 30px;
    color: navy;
    text-align: center;
}

.menu-profile-stats {
    width: 250px;
    height: 200px;
    background-image: url('./img/vertical-separator.png');
    background-size: 8px 120px;
    background-repeat: no-repeat;
    background-position: center center;
}

.menu-profile-stats div {
    color: #888888;
    padding: 20px;
    padding-top: 60px;
    float: left;
    text-align: center;
    width: 125px;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

.menu-profile-stats img {
    margin-top: 10px;
    width: 30px;
}

.menu-profile-stat-values {
    font-weight: bold;
    font-size: 22px;
}

h2 {
    font-family: 'Kalam', cursive;
}

a {
    color: white;
    text-decoration: underline;
}

.line-separator {
    height: 2px;
    background: white;
    border-bottom: 1px solid black;

}

.course-selector {
    min-height: 300px;
    margin-top: 100px;
    color: white;
    padding: 0;
}

.course-selector h2 {
    color: white;
}

.course-selector li {
    list-style: none;
    display: inline-block;
    margin: 0 20px;
}

.course-icon {
    display: inline-block;
    margin: 20px;
}

.course-icon img {
    display: inline-block;
    -webkit-transition: -webkit-transform .8s ease-in-out;
    transition:         transform .8s ease-in-out;
}

.course-icon img:hover {
    -webkit-transform: rotate(180deg);
    transform: rotate(180deg);
}

.course-icon div {
    margin-top: 10px;
}


/***********************
FLASHCARDS
***********************/

.flashcard {
    position:relative;
    margin: auto;
    color: black;
    padding: 15px;
    padding-right: 25px;
    padding-bottom: 25px;
    width: 366px;
    height: 366px;
    text-align: left;
    background-image: url('./img/bg-question.png');
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

.flashcard-title {
    color: gray;
}

.flashcard-content {
    display: table;
    width: 100%;
    height: 90%;
}

.flashcard-content-text {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    padding: 40px;
    padding-top: 10px;
    padding-bottom: 20px;
    display: table-cell;
    vertical-align: middle;
}

.flashcard-footer {
    position: absolute;
    bottom: 28px;
    font-size: 10px;
    color: gray;
}

.answer-buttons-container {
    position: absolute;
    width: 100%;
    height: 180px;
    bottom: 0;
    background-color: white;
    background-image: url('img/bg-shadow-bottom.png');
    background-repeat: repeat-x;
    background-position: top;
}

.answer-button {
     margin-left: 10px;
     margin-right: 10px;
     cursor: pointer;
     width: 120px;
     height: 120px;
 }

.skip-tutorial-button {
    background-image: url('img/button-skip-tutorial.png');
    background-repeat: repeat-x;
    background-position: top;
    background-size: cover;
    margin: auto;
    margin-top: 20px;
    cursor: pointer;
    width: 400px;
    height: 70px;
    vertical-align: middle;
    line-height: 70px;

}
.skip-tutorial-button:hover {
    color: #eaeaea;
}

.scrollable-text {
    max-height: 100%;
    overflow: scroll;
}

.center-text {
    text-align: center;
}

.input-answer {
    width: 100%;
    height: 60%;
}

.hidden>p {
    display:none;
}

.visible>p {
    display:block;
}

/***********************
INTRODUCTION
***********************/

.make-it-bigger:hover {
    transform: scale(1.3);
}

#bigger-font {
    font-size: 24px;
    font-weight: bold;
}
/* ... */

